[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/TouchControls.gd" type="Script" id=1]
[ext_resource path="res://Assets/right.png" type="Texture" id=2]
[ext_resource path="res://Assets/up.png" type="Texture" id=3]
[ext_resource path="res://Assets/left.png" type="Texture" id=4]

[node name="TouchControls" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="UpBtn" type="TouchScreenButton" parent="."]
position = Vector2( 56, 600 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )

[node name="LeftBtn" type="TouchScreenButton" parent="."]
position = Vector2( 984, 600 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="RightBtn" type="TouchScreenButton" parent="."]
position = Vector2( 1120, 600 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="test" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UpBtn" to="." method="_on_UpBtn_pressed"]
[connection signal="released" from="UpBtn" to="." method="_on_UpBtn_released"]
[connection signal="pressed" from="LeftBtn" to="." method="_on_LeftBtn_pressed"]
[connection signal="released" from="LeftBtn" to="." method="_on_LeftBtn_released"]
[connection signal="pressed" from="RightBtn" to="." method="_on_RightBtn_pressed"]
[connection signal="released" from="RightBtn" to="." method="_on_RightBtn_released"]
